--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,9 +37,11 @@ main {
   li {
     list-style-type: none;
     margin-bottom: 1rem;
+
     a {
       font-size: 1.5rem;
     }
+
     a:hover {
       color: crimson;
 
@@ -51,5 +53,32 @@ main {
 }
 
 footer {
-  text-align: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+
+  ul {
+    display: flex;
+    transition: all 1s ease;
+
+    li {
+      list-style-type: none;
+
+      a {
+
+        margin-left: 1rem;
+        text-decoration: none;
+      }
+      a:hover {
+        color: red;
+
+      }
+
+    }
+  }
+
 }
